Allow welcome screen to overflow with scroll and remove ugly overscroll on page Issue https://github.com/cilium/hubble-ui/issues/776.

--- a/src/components/ServiceMapApp/WelcomeScreen.scss
+++ b/src/components/ServiceMapApp/WelcomeScreen.scss
@@ -3,7 +3,7 @@
 .wrapper {
   flex-grow: 1;
   width: 100%;
-  height: 100%;
+  overflow: auto;
 }
 
 .content {
