--- a/src/index.scss
+++ b/src/index.scss
@@ -3,8 +3,8 @@
 :global {
   html {
     box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
-      sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif,
+      'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     height: 100%;
   }
 
@@ -23,6 +23,7 @@
     min-height: 100%;
     background-color: #fff;
     font-size: 16px;
+    overscroll-behavior: none;
   }
 
   .light {
